# server-automation

./: .gitignore  CLAUDE.md  Makefile  README.md  ansible.cfg  inventory.yaml  justfile  pants.toml  requirements.yml  servers.yml
.claude/: settings.local.json
ansible/: ansible.cfg  inventory.yaml  requirements.yml
docs/: poochella-stability-runbook.md  rma-evidence-pve-home-02-2026-05-15.txt  storage-disk-runbook.md
dotfiles/: README.md  justfile
files/: .bash_aliases  .bashrc  .vimrc  bootstrap_ansible.sh  setup_hypervisor.sh
group_vars/: baremetal.yml  containers.yml  databases.yml  dev.yml  dns.yml  kube_control_plane.yml  kube_workers.yml  kubernetes.yml  router.yml  virtual-machines.yml  webservers.yml
img/: README.md  justfile
img/bytepen/: Cargo.toml  README.md  bytepen
img/bytepen/src/: cli.rs  main.rs  util.rs
img/bytepen/src/commands/: flash.rs  format.rs  info.rs  list.rs  mod.rs  partition.rs  wipe.rs
img/bytepen/src/platform/: linux.rs  macos.rs  mod.rs
inventory/: servers.yml
k8s/: README.md  justfile
playbooks/: build-and-deploy-canciones.yml  docker.yml  (+18 more)
scripts/images/proxmox/: answer.toml  first-boot.sh  pve-home-01.toml  pve-home-02.toml  pve-home-03.toml  pyproject.toml
scripts/images/proxmox/legacy/: write-media.sh
scripts/images/proxmox/linux/: install-and-bundle-image.sh
scripts/images/proxmox/macos/: install-and-bundle-image.sh
scripts/images/proxmox/src/proxmox_iso_builder/: __init__.py  app.py  operations.py  platform.py
scripts/images/proxmox/src/proxmox_iso_builder/screens/: bundle.py  validate.py  write.py
(+706 files in other folders)
