[package]
name = "bytepen"
version = "0.1.0"
edition = "2024"
description = "Disk-prep CLI for flashing images, partitioning, formatting, and wiping removable media"
license = "MIT"

[[bin]]
name = "bytepen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1"
humansize = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "fs"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"
