[project]
name = "proxmox-iso-builder"
version = "0.1.0"
description = "TUI for building Proxmox VE auto-install ISOs"
authors = [
    { name = "Ivan Perdomo", email = "iperdomo2016@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "httpx",
]

[project.scripts]
proxmox-iso-builder = "proxmox_iso_builder.__main__:main"

[build-system]
requires = ["uv_build>=0.8.16,<0.9.0"]
build-backend = "uv_build"
